# crypto-fincoll

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CRYPTO_DATA_SURVEY.md  Dockerfile  README.md  TEST_COVERAGE_SUMMARY.md  conftest.py  coverage_report.txt  deploy_date_cascade.sh  docker-compose.yml  ecosystem.config.js  pm2-guard.sh  prediction_test.csv  pyproject.toml  pyproject.toml.backup  requirements.txt  requirements_fixed.txt  senvec_date_cascade.py  setup_server.sh  start-token-manager.sh  start_fincoll.sh  start_fincoll_continuous.sh  test_auto_batching.py  test_diagnostics_endpoints.sh  test_e2e_training.py  test_enriched_fix.py  test_gpu_binance_integration.py  test_orchestration.py  test_prediction_diversity.sh  test_provider_standalone.py  test_symvec_triad_storage.py  test_token_refresh.py  test_velocity_integration.py  v6_implementation.patch
config/: __init__.py  crypto_feature_dimensions.yaml  dimensions.py  feature_dimensions.yaml
docs/: FINNHUB_TIMEOUT_FIX.md  README.md  SECTOR_ETF_BACKFILL.md
examples/: auto_batching_example.py
fincoll/: __init__.py  ab_testing_manager.py  model_registry_client.py  server.py  symvector.py
models/: finvec_continuous_10epoch.pt
scripts/: analyze_feature_importance.py  backfill_sector_etf_data.py  collect_historical.py  collect_historical_data.py  collect_historical_intelligent.py  collect_historical_standalone.py  cron_warm_cache.sh  prewarm_cache_bulk.py  quick_correlation_analysis.py  run_backfill.py  test_phase4_quick.sh  tradestation_login.py  warm_finnhub_cache.py
tasks/: __init__.py  symvector_tasks.py
tests/: __init__.py  conftest.py  test_all_providers_e2e.py  (+18 more)
(+80 files in other folders)
